# moneybot

./: .env.demo  .gitignore  CMakeLists.txt  CMakeLists_clean.txt  CMakeLists_cli.txt  CMakeLists_simple.txt  COMMIT_MESSAGE.txt  FINAL_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUCCESS.md  PROJECT_STRUCTURE.md  README.md  RETRO_TRANSFORMATION_COMPLETE.md  TRANSFORMATION_COMPLETE.md  build.sh  config.json  demo.sh  docker-compose.yml  full_demo.sh  grid_demo.sh  gui_demo.sh  imgui.ini  load_env.sh  moneybot  retro_demo_preview.sh  retro_space_demo.sh  retro_space_terminal_demo.sh  run.sh  run_moneybot_simple  setup_demo_keys.sh  setup_env.sh  simple_config.json  test_live_data
config/: trading_config.json
data/: test_ticks.json  ticks.db
include/: advanced_orderbook_widget.h  application_state.h  backtest_engine.h  binance_exchange.h  binance_exchange_new.h  cli_command_processor.h  config_manager.h  dashboard_metrics_widget.h  dashboard_orderbook_widget.h  data_analyzer.h  dummy_strategy.h  event_manager.h  exchange_connectors.h  exchange_interface.h  live_trading_manager.h  logger.h  market_data_simulator.h  market_maker_strategy.h  modern_logger.h  moneybot.h  multi_exchange_gateway.h  network.h  order_book.h  order_manager.h  ring_buffer.h  risk_manager.h  simple_logger.h  simple_portfolio_manager.h  statistical_arbitrage_strategy.h  strategy.h  strategy_factory.h  strategy_manager.h  system_manager.h  types.h
include/compat/: pty.h
include/core/: exchange_manager.h  portfolio_manager.h  strategy_controller.h
include/gui/: algorithm_window.h  base_window.h  exchange_window.h  main_window.h  market_data_window.h  portfolio_window.h  risk_window.h
include/strategy/: cross_exchange_arbitrage_strategy.h  strategy_engine.h  triangle_arbitrage_strategy.h
include/testing/: mock_exchange_clean.h  mock_exchange_old.h  test_framework.h
src/: advanced_orderbook_widget.cpp  application_state.cpp  backtest_engine.cpp  binance_exchange.cpp  cli_command_processor.cpp  cli_main.cpp  config_manager.cpp  config_manager.cpp.bak  dashboard_metrics_widget.cpp  dashboard_orderbook_widget.cpp  data_analyzer.cpp  event_manager.cpp  exchange_connectors.cpp  gui_main.cpp  gui_main_new.cpp  gui_main_simple.cpp  live_trading_manager.cpp  logger.cpp  main.cpp  market_data_simulator.cpp  market_maker_strategy.cpp  modern_logger.cpp  moneybot.cpp  multi_exchange_gateway.cpp  network.cpp  order_book.cpp  order_manager.cpp  risk_manager.cpp  simple_portfolio_manager.cpp  strategy_factory.cpp  strategy_manager.cpp  system_manager.cpp  test_live_data.cpp  types.cpp
src/core/: exchange_manager.cpp  portfolio_manager.cpp  strategy_controller.cpp
src/gui/: algorithm_window.cpp  base_window.cpp  exchange_window.cpp  main_window.cpp  main_window_modular.cpp  main_window_simple.cpp  market_data_window.cpp  portfolio_window.cpp  risk_window.cpp
src/strategy/: cross_exchange_arbitrage_strategy.cpp  strategy_engine.cpp  triangle_arbitrage_strategy.cpp
src/testing/: mock_exchange.cpp
tests/: test_portfolio_manager.cpp  test_risk_manager.cpp
